# end-of-master-paper

./: pyproject.toml
.devcontainer/: devcontainer.json
tfm/code/inspector/: discovery.ipynb
tfm/code/notebooks/: kaggle_titanic.ipynb  minist.ipynb  model_training.ipynb
tfm/thesis/: REPORT.md
